home/container-orchestration/kubernetes/practice-tasks/task-local-036-cert-manager-lets-encypt/ingress.yaml
# https://docs.nginx.com/nginx-ingress-controller/configuration/ingress-resources/basic-configuration/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: whoami-ingress
spec:
#  tls:
#    - hosts:
#        - testcertmanager.domainname.com
#      secretName: tls-secret
  rules:
    - host: testcertmanager.domainname.com
      http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
---
